# experimental_pcb

./: README.md  hello.py  pyproject.toml
logs/train/: events.out.tfevents.1737492565.cachyos-x8664.44351.0.v2
logs/validation/: events.out.tfevents.1737492609.cachyos-x8664.44351.1.v2
