[project]
name = "omsissy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.0",
    "chai>=1.1.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pip>=24.3.1",
    "scikit-learn>=1.6.1",
    "tensorflow-addons>=0.23.0",
    "tensorflow[and-cuda]>=2.18.0",
]
